# GG-CORE

./: .gitignore  CLAUDE.md  README.md  ROADMAP.md  SECURITY.md
.claude/: settings.local.json
core-runtime/: Cargo.toml  build.rs  cbindgen.toml  run_e2e_test.bat
core-runtime/benches/: llama_cpp_comparison.rs
core-runtime/fixtures/prompts/: large.json  medium.json  small.json
core-runtime/include/: veritas_sdr.h
core-runtime/python/: pyproject.toml
core-runtime/python/veritas_sdr/: __init__.py  _core.pyi
core-runtime/src/: cli_parser.rs  lib.rs  main.rs  runtime_init.rs
core-runtime/src/ab_testing/: mod.rs  variant.rs
core-runtime/src/cli/: health.rs  ipc_client.rs  mod.rs  status.rs  status_format.rs  status_tests.rs
core-runtime/tests/: ab_testing_test.rs  chaos_resilience_test.rs  chaos_scheduler_shutdown_test.rs  chaos_shutdown_health_test.rs  chaos_stream_model_test.rs  cli_test.rs  ffi_test.rs  integration_end_to_end_test.rs  ipc_server_test.rs  kv_cache_test.rs  model_transition_test.rs  moe_test.rs  security_regression_test.rs
docs/: IPC_PROTOCOL_SCHEMA.md  META_LEDGER.md  RECOMMENDED_MODELS.md  TANDEM_EXPERIMENTS_PROPOSAL.md  USAGE_GUIDE.md
docs/analysis/: RUST_RUNTIME_COMPARISON.md
k8s/crds/: veritasmodel.yaml  veritasruntime.yaml
plans/: SECURITY_REVIEW_REPORT.md  adversarial-security-audit.md  e2e-security-review.md  v0.6.0-execution-plan.md
plans/checkpoints/: checkpoint-template.yaml  p0-design-decisions.yaml  p0-gate.yaml  p0.1-design-decisions.yaml
scripts/: download-models.ps1  download-models.sh
(+111 files in other folders)
