[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "veritas-sdr"
version = "0.4.0"
description = "Python bindings for Veritas SDR - Secure Deterministic Runtime"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
keywords = ["inference", "llm", "machine-learning", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/MythologIQ/CORE"
Documentation = "https://github.com/MythologIQ/CORE/wiki"
Repository = "https://github.com/MythologIQ/CORE"

[tool.maturin]
features = ["python"]
python-source = "."
module-name = "veritas_sdr._core"
manifest-path = "../Cargo.toml"
